@@ -225,6 +225,15 @@ PHP_METHOD(styleObj, __set)
     else IF_SET_DOUBLE("minvalue", php_style->style->minvalue, value)
     else IF_SET_DOUBLE("maxvalue", php_style->style->maxvalue, value)
     else IF_SET_STRING("rangeitem", php_style->style->rangeitem, value)
+    else IF_SET_LONG("rangeitemindex", php_style->style->rangeitemindex, value)
+    else IF_SET_DOUBLE("gap", php_style->style->gap, value)
+    else IF_SET_LONG("patternlength", php_style->style->patternlength, value)  
+    else IF_SET_LONG("position", php_style->style->position, value)
+    else IF_SET_LONG("linecap", php_style->style->linecap, value)
+    else IF_SET_LONG("linejoin", php_style->style->linejoin, value)
+    else IF_SET_LONG("linejoinmaxsize", php_style->style->linejoinmaxsize, value)
+    else IF_SET_DOUBLE("angle", php_style->style->angle, value)
+    else IF_SET_LONG("autoangle", php_style->style->autoangle, value)
     else IF_SET_LONG("opacity", php_style->style->opacity, value)
     else if (STRING_EQUAL("symbolname", property))
     {
